--- a/random.html
+++ b/random.html
@@ -22,9 +22,9 @@
 				<li><a href="https://www.si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
+		<h1>Random Page</h1>
 	</header>
 	<main>
-		<h2>Random Page</h2>
 
 		<p>Make sure you are doing the readings from the <a href = "www.w3schools.com/html/">W3 Schools HTML tutorial</a> as well as the readings from <a href = "https://learn.shayhowe.com/html-css/">Shay Howe's</a>HTML and CSS tutorial.</p>
 
@@ -32,7 +32,7 @@
 	</main>
 
 	<footer>
-		<p>Colleen van Lent copy 2020</p>
+		<p>Colleen van Lent &copy; 2020</p>
 	</footer>
 
 </body>
