--- a/personal.html
+++ b/personal.html
@@ -36,7 +36,9 @@
 		<img src = "images/rushmore.jpg" width="25" alt="photo of mount Rushmore"/>
 	</main>
 
-	<footer>Colleen van Lent &copy; 2020</footer>
+	<footer>
+		<p>Colleen van Lent &copy; 2020</p>
+	</footer>
 	
 </body>
 </html>
